cmake_minimum_required(VERSION 3.12)
project(helloworld)

set(CMAKE_CXX_STANDARD 11)

add_executable(helloworld main.cpp helloworld.c 数据类型.c 取地址.c 浮点型数据.c 运算符.c 循环结构.c 选择结构.c 成绩评级系统.c 选择结构2.c 跳转goto.c 数组.c 二维数组.c 数组之间的赋值.c 指针.c 指针与数组.c 指针数组拉链结构.c 数组指针.c 二维数组与指针.c 利用指针遍历二维数组.c 栈区大小.c malloc.c malloc注意点.c free.c malloc数组.c calloc和realoc.c 数组最大值.c 无参数无返回值.c 函数声明.c 无参数有返回值.c 有参数无返回值.c 有参数有返回值.c 函数地址.c 递归函数.c 参数个数不确定的函数.c 字符.c 大小写转换.c 字符数组.c 字符串.c)