cmake_minimum_required(VERSION 3.12)
project(helloworld)

set(CMAKE_CXX_STANDARD 11)

add_executable(helloworld main.cpp helloworld.c 数据类型.c 取地址.c 浮点型数据.c 运算符.c 循环结构.c 选择结构.c 成绩评级系统.c 选择结构2.c 跳转goto.c 数组.c 二维数组.c 数组之间的赋值.c 指针.c 指针与数组.c 指针数组拉链结构.c 数组指针.c 二维数组与指针.c 利用指针遍历二维数组.c 栈区大小.c malloc.c malloc注意点.c free.c malloc数组.c calloc和realoc.c 数组最大值.c 无参数无返回值.c 函数声明.c 无参数有返回值.c 有参数无返回值.c 有参数有返回值.c 函数地址.c 递归函数.c 参数个数不确定的函数.c 字符.c 大小写转换.c 字符数组.c 字符串.c 字符数组赋值.c 字符数组的输入.c 中文与字符.c 字符串操作函数.c 字符串数组.c 声明一个结构体.c 指针成员和函数成员.c 结构体嵌套.c 结构体数组.c 结构体的大小.c 联合体.c 枚举类型.c 大小端测试.c typedef.c 宏.c cmain.c c3.c c3.h d3.c d3.h)